# SEBAS

./: Cargo.toml  README.md
.sebas/: Miscellaneous.yaml  comando.yaml  git.yaml  ungrouped.yaml
src/: commands.rs  main.rs  storage.rs
src/commands/: init.rs  mod.rs  sync.rs
src/commands/commands/: definition.rs  implementation.rs
src/commands/core/: definition.rs  implementation.rs  mod.rs
src/commands/group/: definition.rs  implementation.rs
src/utils/: dir.rs  fzf.rs  mod.rs  preseed.rs
