[package]
name = "s"
version = "0.1.0"
edition = "2021"
description = "A command-line tool for bookmarking and storing frequently used commands"
authors = ["Noir"]
license = "GPL-3.0"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
uuid = { version = "1.6", features = ["v4"] }
home = "0.5"
colored = "2.1.0"
